--- a/labs-ios-starter/CityDashboard.storyboard
+++ b/labs-ios-starter/CityDashboard.storyboard
@@ -401,7 +401,7 @@ CA</string>
                                 <rect key="frame" x="-389.5" y="0.0" width="1193" height="858"/>
                             </imageView>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h4j-uv-jdN">
-                                <rect key="frame" x="18" y="136" width="378" height="279"/>
+                                <rect key="frame" x="18" y="357.5" width="378" height="203"/>
                                 <color key="backgroundColor" name="DarkishBlue"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vH3-tc-VFQ">
@@ -434,26 +434,40 @@ CA</string>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yns-pc-Wik">
-                                <rect key="frame" x="18" y="491" width="378" height="279"/>
+                                <rect key="frame" x="18" y="596.5" width="378" height="203.5"/>
                                 <color key="backgroundColor" name="DarkishBlue"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wQV-w7-3Fe" customClass="SCNView">
-                                <rect key="frame" x="20" y="138" width="374" height="275"/>
+                                <rect key="frame" x="20" y="359.5" width="374" height="199"/>
                                 <color key="backgroundColor" name="PalestBlue"/>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BNN-Lx-ZbZ" customClass="SCNView">
-                                <rect key="frame" x="20" y="493" width="374" height="275"/>
+                                <rect key="frame" x="20" y="598.5" width="374" height="199.5"/>
                                 <color key="backgroundColor" name="PalestBlue"/>
                             </view>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Average Low Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JfE-yM-Ul0">
-                                <rect key="frame" x="20" y="104" width="245" height="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Low Temperatures - Average by Month" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="JfE-yM-Ul0">
+                                <rect key="frame" x="20" y="330.5" width="357.5" height="24"/>
                                 <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="20"/>
                                 <color key="textColor" name="DarkBlue"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Average High Temperature" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bHe-nL-SnL">
-                                <rect key="frame" x="20" y="459" width="248" height="24"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9Xe-R1-nJR">
+                                <rect key="frame" x="18" y="116" width="378" height="203.5"/>
+                                <color key="backgroundColor" name="DarkishBlue"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="High Temperatures - Average by Month" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="bHe-nL-SnL">
+                                <rect key="frame" x="20" y="569.5" width="361" height="24"/>
                                 <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="20"/>
+                                <color key="textColor" name="DarkBlue"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ga9-6B-j4W" customClass="SCNView">
+                                <rect key="frame" x="20" y="118" width="374" height="199.5"/>
+                                <color key="backgroundColor" name="PalestBlue"/>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Weather Conditions - Average Days per Year" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="sfe-eh-XBC">
+                                <rect key="frame" x="20" y="91" width="348.5" height="20"/>
+                                <fontDescription key="fontDescription" name="TrebuchetMS-Bold" family="Trebuchet MS" pointSize="17"/>
                                 <color key="textColor" name="DarkBlue"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -462,35 +476,49 @@ CA</string>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" secondItem="vH3-tc-VFQ" secondAttribute="trailing" id="1CI-Lk-5qH"/>
+                            <constraint firstItem="9Xe-R1-nJR" firstAttribute="top" secondItem="sfe-eh-XBC" secondAttribute="bottom" constant="5" id="3Cg-xd-m6G"/>
                             <constraint firstItem="h4j-uv-jdN" firstAttribute="height" secondItem="wQV-w7-3Fe" secondAttribute="height" constant="4" id="8FP-JR-vAu"/>
                             <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="20" id="99w-OY-MK4"/>
-                            <constraint firstItem="wQV-w7-3Fe" firstAttribute="top" secondItem="JfE-yM-Ul0" secondAttribute="bottom" constant="10" id="AW7-oJ-RuI"/>
+                            <constraint firstItem="wQV-w7-3Fe" firstAttribute="top" secondItem="JfE-yM-Ul0" secondAttribute="bottom" constant="5" id="AW7-oJ-RuI"/>
                             <constraint firstItem="bHe-nL-SnL" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="20" id="D3G-nk-FCf"/>
                             <constraint firstItem="Yns-pc-Wik" firstAttribute="height" secondItem="BNN-Lx-ZbZ" secondAttribute="height" constant="4" id="DuX-2d-kGX"/>
                             <constraint firstItem="fkV-ql-ZdZ" firstAttribute="bottom" secondItem="0Ra-U6-M3T" secondAttribute="bottom" constant="-50" id="FlH-vl-gIe"/>
                             <constraint firstItem="0Ra-U6-M3T" firstAttribute="top" secondItem="fkV-ql-ZdZ" secondAttribute="top" id="HSE-0e-VN1"/>
-                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="bottom" secondItem="BNN-Lx-ZbZ" secondAttribute="bottom" constant="40" id="HTn-ua-Cyu"/>
+                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="bottom" secondItem="BNN-Lx-ZbZ" secondAttribute="bottom" constant="10" id="HTn-ua-Cyu"/>
                             <constraint firstItem="Yns-pc-Wik" firstAttribute="centerY" secondItem="BNN-Lx-ZbZ" secondAttribute="centerY" id="I0e-vp-Qfv"/>
-                            <constraint firstItem="wQV-w7-3Fe" firstAttribute="top" secondItem="vH3-tc-VFQ" secondAttribute="bottom" constant="60" id="INI-XZ-WbZ"/>
+                            <constraint firstItem="Ga9-6B-j4W" firstAttribute="height" secondItem="wQV-w7-3Fe" secondAttribute="height" id="IHe-M0-4nl"/>
+                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="bHe-nL-SnL" secondAttribute="trailing" constant="20" id="MvA-hm-Xmz"/>
+                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" secondItem="Ga9-6B-j4W" secondAttribute="trailing" constant="20" id="P7d-70-5e8"/>
                             <constraint firstItem="0Ra-U6-M3T" firstAttribute="centerX" secondItem="B9T-RB-LMb" secondAttribute="centerX" id="Pbe-N2-9Pq"/>
                             <constraint firstItem="h4j-uv-jdN" firstAttribute="width" secondItem="wQV-w7-3Fe" secondAttribute="width" constant="4" id="Rw0-XZ-oPD"/>
                             <constraint firstItem="vH3-tc-VFQ" firstAttribute="top" secondItem="fkV-ql-ZdZ" secondAttribute="top" constant="-50" id="Tvg-di-qlt"/>
-                            <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="top" secondItem="wQV-w7-3Fe" secondAttribute="bottom" constant="80" id="YIm-P3-xR7"/>
+                            <constraint firstItem="9Xe-R1-nJR" firstAttribute="centerX" secondItem="Ga9-6B-j4W" secondAttribute="centerX" id="Ve6-sG-612"/>
+                            <constraint firstItem="Ga9-6B-j4W" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="20" id="Xpv-2W-2NT"/>
+                            <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="top" secondItem="wQV-w7-3Fe" secondAttribute="bottom" constant="40" id="YIm-P3-xR7"/>
                             <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" secondItem="BNN-Lx-ZbZ" secondAttribute="trailing" constant="20" id="YUD-Qf-z4q"/>
-                            <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="top" secondItem="bHe-nL-SnL" secondAttribute="bottom" constant="10" id="cK4-Jl-3kc"/>
+                            <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="top" secondItem="bHe-nL-SnL" secondAttribute="bottom" constant="5" id="cK4-Jl-3kc"/>
+                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="sfe-eh-XBC" secondAttribute="trailing" constant="20" id="cXq-gu-Bd9"/>
                             <constraint firstItem="JfE-yM-Ul0" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="20" id="dEN-GV-h0P"/>
                             <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" secondItem="wQV-w7-3Fe" secondAttribute="trailing" constant="20" id="gOR-bV-tpt"/>
+                            <constraint firstItem="wQV-w7-3Fe" firstAttribute="top" secondItem="9Xe-R1-nJR" secondAttribute="bottom" constant="40" id="h2G-QD-0s0"/>
                             <constraint firstItem="Yns-pc-Wik" firstAttribute="width" secondItem="BNN-Lx-ZbZ" secondAttribute="width" constant="4" id="hfN-aT-MdC"/>
+                            <constraint firstItem="9Xe-R1-nJR" firstAttribute="centerY" secondItem="Ga9-6B-j4W" secondAttribute="centerY" id="iW5-G8-Lo3"/>
                             <constraint firstItem="BNN-Lx-ZbZ" firstAttribute="height" secondItem="wQV-w7-3Fe" secondAttribute="height" id="lah-kD-eMK"/>
                             <constraint firstItem="wQV-w7-3Fe" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="20" id="m0u-E9-7tS"/>
+                            <constraint firstItem="9Xe-R1-nJR" firstAttribute="height" secondItem="Ga9-6B-j4W" secondAttribute="height" constant="4" id="nqn-r8-bXw"/>
                             <constraint firstItem="h4j-uv-jdN" firstAttribute="centerX" secondItem="wQV-w7-3Fe" secondAttribute="centerX" id="o4M-VX-eQE"/>
                             <constraint firstItem="Yns-pc-Wik" firstAttribute="centerX" secondItem="BNN-Lx-ZbZ" secondAttribute="centerX" id="p1B-b9-hqt"/>
+                            <constraint firstItem="9Xe-R1-nJR" firstAttribute="width" secondItem="Ga9-6B-j4W" secondAttribute="width" constant="4" id="seu-c2-KXB"/>
                             <constraint firstItem="h4j-uv-jdN" firstAttribute="centerY" secondItem="wQV-w7-3Fe" secondAttribute="centerY" id="vMI-J5-k4e"/>
+                            <constraint firstItem="fkV-ql-ZdZ" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="JfE-yM-Ul0" secondAttribute="trailing" constant="20" id="vhe-lk-vgs"/>
+                            <constraint firstItem="Ga9-6B-j4W" firstAttribute="top" secondItem="vH3-tc-VFQ" secondAttribute="bottom" constant="40" id="xOa-DZ-bDU"/>
+                            <constraint firstItem="sfe-eh-XBC" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" constant="20" id="xOk-s5-Lae"/>
                             <constraint firstItem="vH3-tc-VFQ" firstAttribute="leading" secondItem="fkV-ql-ZdZ" secondAttribute="leading" id="xht-1v-eXW"/>
                         </constraints>
                     </view>
                     <connections>
                         <outlet property="cityLabel" destination="o4j-yA-lIS" id="RBM-20-h2R"/>
+                        <outlet property="conditionsView" destination="Ga9-6B-j4W" id="1GM-r2-Og6"/>
                         <outlet property="highView" destination="BNN-Lx-ZbZ" id="ase-Vt-LVb"/>
                         <outlet property="lowView" destination="wQV-w7-3Fe" id="DFa-Lw-w8b"/>
                     </connections>
@@ -647,25 +675,25 @@ CA</string>
         <image name="pin" catalog="system" width="119" height="128"/>
         <image name="pin.fill" catalog="system" width="119" height="128"/>
         <namedColor name="AccentGreen">
-            <color red="0.29019607843137252" green="0.47843137254901957" blue="0.5490196078431373" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.28999999165534973" green="0.4779999852180481" blue="0.54900002479553223" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="DarkBlue">
-            <color red="0.062745098039215685" green="0.27058823529411763" blue="0.45098039215686275" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.063000001013278961" green="0.27099999785423279" blue="0.45100000500679016" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="DarkishBlue">
-            <color red="0.19215686274509802" green="0.40000000000000002" blue="0.5607843137254902" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.19200000166893005" green="0.40000000596046448" blue="0.56099998950958252" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="OffWhite">
-            <color red="0.96470588235294119" green="0.95686274509803915" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.9649999737739563" green="0.9570000171661377" blue="0.95300000905990601" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="PaleBlue">
-            <color red="0.84313725490196079" green="0.89411764705882346" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.84299999475479126" green="0.89399999380111694" blue="0.9179999828338623" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="PalestBlue">
-            <color red="0.89411764705882346" green="0.92941176470588238" blue="0.94509803921568625" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.89399999380111694" green="0.92900002002716064" blue="0.94499999284744263" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="VeryLightBlue">
-            <color red="0.792156862745098" green="0.85882352941176465" blue="0.8901960784313725" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color red="0.79199999570846558" green="0.85900002717971802" blue="0.88999998569488525" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
